2016-01-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2893: test/tapset/jstaptest.pl should be executable
	* Makefile.am:
	(check-tapset-probes): Check that Perl is available
	and, if so, use it to invoke the script.
	(check-tapset-jstack): Likewise.
	* NEWS: Updated.
	* configure.ac:
	Check for Perl if SystemTap is found, so the
	tests can be run if required.

2016-03-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2803: Make system CUPS optional
	* INSTALL: Document --enable-system-cups.
	* Makefile.am:
	(ICEDTEA_ENV): Set SYSTEM_CUPS to the
	value of ENABLE_SYSTEM_CUPS rather than 'true'.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_CHECK_FOR_CUPS): Only check for the library
	if --enable-system-cups is on.

2016-03-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2781, CA195: typeinfo.cpp: typeinfo_merge_nonarrays:
	Assertion `dest && result && x.any && y.any' failed
	* Makefile.am:
	(ICEDTEA_PATCHES): Add new patch.
	* NEWS: Updated.
	* patches/cacao/pr2781-refactoring_error.patch:
	Backport of refactoring fix from
	https://bitbucket.org/Ringdingcoder/cacao-staging

2016-01-25  Andrew John Hughes  <gnu.andrew@redhat.com>

	* NEWS: Add 2.6.5 section.
	* configure.ac: Bump to 2.6.5pre00.

2016-01-19  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am,
	(JDK_UPDATE_VERSION): Bump to 95.
	(BUILD_VERSION): Reset to b00.
	(CORBA_CHANGESET): Update to icedtea-2.6.4.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Update and set release date.
	* configure.ac: Bump to 2.6.4.
	* hotspot.map.in: Update to icedtea-2.6.4.
	* patches/boot/ecj-diamond.patch:
	Regenerated. Add new case in
	sun.reflect.annotation.AnnotationInvocationHandler.