@@ -69,7 +69,7 @@ REWRITER_BUILD_DIR = $(abs_top_builddir)/rewriter.build
 STAGE1_BOOT_DIR = $(abs_top_builddir)/bootstrap/boot
 STAGE2_BOOT_DIR = $(abs_top_builddir)/bootstrap/icedtea
 JAMVM_IMPORT_PATH = $(abs_top_builddir)/jamvm/install/hotspot
-CRYPTO_CHECK_BUILD_DIR = $(abs_top_builddir)/cryptocheck.build
+CRYPTO_CHECK_BUILD_DIR = $(abs_top_builddir)/test/cryptocheck.build
 STAGE1_BOOT_RUNTIME = $(STAGE1_BOOT_DIR)/jre/lib/rt.jar
 STAGE2_BOOT_RUNTIME = $(STAGE2_BOOT_DIR)/jre/lib/rt.jar
 FONTCONFIG_PATH = openjdk/jdk/src/solaris/classes/sun/awt/fontconfigs
@@ -2815,6 +2815,7 @@ jtreg_pids = ps x --no-headers -ww -o pid,ppid,args \
 	| awk '$$2 == 1 && $$3 ~ /^$(subst /,\/,$(CURDIR)/$(sdkimg))/ {print $$1}'
 
 jtregcheck: $(TESTS_TO_RUN)
+	$(MKDIR_P) test
 	for i in $(TEST_SUITES); do \
 	  echo "--------------- jtreg console summary for $$i ---------------"; \
 	  egrep -v '^(Passed:|Directory|Re[a-z]+\ written\ to)' test/check-$$i.log; \
@@ -2848,6 +2849,7 @@ if ENABLE_SYSTEMTAP
 	if test "x${PERL}" = "x"; then \
 	  echo "ERROR: Perl not found"; exit -1; \
 	fi
+	$(MKDIR_P) test
 	${PERL} $(abs_top_srcdir)/test/tapset/jstaptest.pl \
 	  -B $(BUILD_OUTPUT_DIR) -A $(BUILD_ARCH_DIR) \
 	  -S $(abs_top_srcdir)/test/tapset \
@@ -2858,6 +2860,7 @@ if ENABLE_SYSTEMTAP
 	if test "x${PERL}" = "x"; then \
 	  echo "ERROR: Perl not found"; exit -1; \
 	fi
+	$(MKDIR_P) test
 	${PERL} $(abs_top_srcdir)/test/tapset/jstaptest.pl \
 	  -B $(BUILD_OUTPUT_DIR) -A $(BUILD_ARCH_DIR) \
 	  -S $(abs_top_srcdir)/test/tapset \
