@@ -17,6 +17,7 @@ New in release 2.6.5 (2016-04-XX):
 * Bug fixes
   - PR2803: Make system CUPS optional
   - PR2893: test/tapset/jstaptest.pl should be executable
+  - PR2894: Add missing test directory in make check.
 * CACAO
   - PR2781, CA195: typeinfo.cpp: typeinfo_merge_nonarrays: Assertion `dest && result && x.any && y.any' failed
 
