@@ -1,3 +1,15 @@
+2016-03-14  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
+	PR2894: Add missing test directory in make check
+	* Makefile.am:
+	(CRYPTO_CHECK_BUILD_DIR): Locate inside the test
+	directory.
+	(jtregcheck): Create the test directory if it
+	doesn't exist.
+	(check-tapset-probes): Likewise.
+	(check-tapset-jstack): Likewise.
+	* NEWS: Updated.
+
 2016-01-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
 	PR2893: test/tapset/jstaptest.pl should be executable
